# gimp-plugin-astronomy

./: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
.github/workflows/: main.yml
doc/: Makefile.am
po/: Makefile.am  gimp-plugin-astronomy.pot  pt.po  ru.po
rpm/: gimp-plugin-astronomy.spec  gimp-plugin-astronomy.spec.in
scripts/: Makefile.am
src/: Makefile.am  config.h.in
